# RayTracing

./: .gitignore  CMakeLists.txt  main.cpp
mirror_effect/: main.cpp
mirror_effect/util/: hit_control.h
mirror_effect/util/src/: hit_control.cpp
random_light_ray/: CMakeLists.txt  main.cpp
random_light_ray/util/: algorithm.h  color.h  constant.h  hit_control.h  object_control.hpp
util/: hit_control.h  object_control.hpp
